chromeos: Fix dictation into keyboard shortcut viewer app

Chrome creates a second InputMethodChromeOS when a remote mojo app
opens. This sets a new IMEInputContextHandler on IMEBridge, but does
not trigger an "engine switch".

Make sure the dictation code looks up the current IMEInputContextHandler
each time it tries to inject text.

Bug: 876448
Test: added to interactive_ui_tests
Change-Id: I100a62920ffb397ec823a4bcddb1adf94ec5f6a3
Reviewed-on: https://chromium-review.googlesource.com/1187135
Commit-Queue: James Cook <jamescook@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585632}
Former-commit-id: cae5f8710a9652a6f1716812fbedfdd59fced679