chrome/browser/chromeos/accessibility/dictation_chromeos.h
@@ -11,11 +11,9 @@
 #include "base/memory/weak_ptr.h"
 #include "chrome/browser/speech/speech_recognizer_delegate.h"
 #include "content/public/browser/speech_recognition_session_preamble.h"
-#include "ui/base/ime/ime_bridge_observer.h"
 
 namespace ui {
 struct CompositionText;
-class IMEInputContextHandlerInterface;
 }  // namespace ui
 
 class Profile;
@@ -24,8 +22,7 @@ class SpeechRecognizer;
 namespace chromeos {
 
 // Provides global dictation (type what you speak) on Chrome OS.
-class DictationChromeos : public SpeechRecognizerDelegate,
-                          ui::IMEBridgeObserver {
+class DictationChromeos : public SpeechRecognizerDelegate {
  public:
   explicit DictationChromeos(Profile* profile);
   ~DictationChromeos() override;
@@ -34,6 +31,8 @@ class DictationChromeos : public SpeechRecognizerDelegate,
   bool OnToggleDictation();
 
  private:
+  friend class DictationTest;
+
   // SpeechRecognizerDelegate:
   void OnSpeechResult(const base::string16& query, bool is_final) override;
   void OnSpeechSoundLevelChanged(int16_t level) override;
@@ -42,21 +41,16 @@ class DictationChromeos : public SpeechRecognizerDelegate,
   void GetSpeechAuthParameters(std::string* auth_scope,
                                std::string* auth_token) override;
 
-  // IMEBridgeObserver
-  void OnRequestSwitchEngine() override;
-
   // Saves current dictation result and stops listening.
   void DictationOff();
 
   std::unique_ptr<SpeechRecognizer> speech_recognizer_;
   std::unique_ptr<ui::CompositionText> composition_;
-  ui::IMEInputContextHandlerInterface* input_context_;
 
   Profile* profile_;
 
   base::WeakPtrFactory<DictationChromeos> weak_ptr_factory_;
 
-  friend class DictationTest;
   DISALLOW_COPY_AND_ASSIGN(DictationChromeos);
 };
 
